creating css component for about me sec

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -91,6 +91,7 @@ img{
 
 @import "partials/animations";
 @import "partials/mainsection.scss";
+@import "partials/intro.scss";
 @import "partials/motivation.scss";
 @import "partials/searches.scss";
 @import "partials/recipes-section.scss";
